tests/baselines/reference/structWithPredefinedTypesAsNames.errors.txt
tests/cases/conformance/structs/structDeclarations/structWithPredefinedTypesAsNames.ts(3,8): error TS2414: Class name cannot be 'any'
tests/cases/conformance/structs/structDeclarations/structWithPredefinedTypesAsNames.ts(4,8): error TS2414: Class name cannot be 'number'
tests/cases/conformance/structs/structDeclarations/structWithPredefinedTypesAsNames.ts(5,8): error TS2414: Class name cannot be 'boolean'
tests/cases/conformance/structs/structDeclarations/structWithPredefinedTypesAsNames.ts(6,8): error TS2414: Class name cannot be 'string'


==== tests/cases/conformance/structs/structDeclarations/structWithPredefinedTypesAsNames.ts (4 errors) ====
    // structes cannot use predefined types as names
    
    struct any { }
           ~~~
!!! error TS2414: Class name cannot be 'any'
    struct number { }
           ~~~~~~
!!! error TS2414: Class name cannot be 'number'
    struct boolean { }
           ~~~~~~~
!!! error TS2414: Class name cannot be 'boolean'
    struct string { }
           ~~~~~~
!!! error TS2414: Class name cannot be 'string'